--- a/main.tex
+++ b/main.tex
@@ -71,4 +71,19 @@
 % --- Section 1 ---
 \input{sections/perception}
 
+% --- Section 2 ---
+\input{sections/mapping}
+
+% --- Section 3 ---
+\input{sections/ekf}
+
+% --- Section 4 ---
+\input{sections/slam}
+
+% --- Section 5 ---
+\input{sections/interfaces}
+
+% --- Section 6 ---
+\input{sections/tf2}
+
 \end{document}
