--- a/sections/tf2.tex
+++ b/sections/tf2.tex
@@ -31,7 +31,7 @@
 		\medskip
 		It allows to:
 		\begin{itemize}
-			\item \textbg{broadcast} and \textbg{listen} to transformations, thanks to appropriate buffering subscribers;
+			\item \textbg{broadcast} and \textbg{listen} to transformations, thanks to appropriate buffering subscribers and publishers;
 			\item \textbg{transform} any kind of sensor data from one frame to another, making efficient computations in C++ code relying on the \texttt{Eigen} mathematical library;
 			\item broadcast \textbg{robot descriptions} from \texttt{URDF} files, listing links and joints and how they are connected, resulting in a \textbg{tree-like structure};
 			\item \textbg{command-line tools} to inspect the current tree status, and broadcast custom transformations.
