--- a/main.tex
+++ b/main.tex
@@ -54,6 +54,7 @@
   morekeywords={services:, build:, context:, network_mode:, args:, environment:, command:, volumes:, image:, -}
 }
 
+\usepackage{multimedia}
 \usepackage{hyperref}
 \usepackage{wasysym}
 
