fix: rearrange sections

--- a/sections/interfaces.tex
+++ b/sections/interfaces.tex
@@ -1,4 +1,4 @@
-% Section 5 - Common interfaces
+% Section 4 - Common interfaces
 % Roberto Masocco <roberto.masocco@uniroma2.it>
 % June 5, 2024
 
@@ -52,7 +52,7 @@
 % --- nav_msgs ---
 \begin{frame}{\texttt{nav\_msgs}}{Common interfaces for navigation data}
   \begin{itemize}
-    \item \texttt{Odometry}
+    \item \texttt{Odometry} (\texttt{Header}, body (child) frame ID, \texttt{PoseWithCovariance}, \texttt{TwistWithCovariance})
     \item \texttt{Path}
     \item \texttt{OccupancyGrid}
     \item ...
