feat: EKF (WIP)

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 % Slides layout
 \usepackage[
     title={Localization and mapping},
-    subtitle={From EKF to SLAM},
+    subtitle={From SLAM to EKF},
     event={DAFN},
     author={Roberto Masocco},
     longauthor={Roberto Masocco},
