feat: EKF, videos

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 % Slides layout
 \usepackage[
     title={Localization and mapping},
-    subtitle={From SLAM to EKF},
+    subtitle={From EKF to SLAM},
     event={DAFN},
     author={Roberto Masocco},
     longauthor={Roberto Masocco},
@@ -73,18 +73,18 @@
 \input{sections/perception}
 
 % --- Section 2 ---
-\input{sections/mapping}
-
-% --- Section 3 ---
-\input{sections/slam}
-
-% --- Section 4 ---
 \input{sections/interfaces}
 
-% --- Section 5 ---
+% --- Section 3 ---
 \input{sections/tf2}
 
-% --- Section 6 ---
+% --- Section 4 ---
 \input{sections/ekf}
+
+% --- Section 5 ---
+\input{sections/mapping}
+
+% --- Section 6 ---
+\input{sections/slam}
 
 \end{document}
