--- a/sections/interfaces.tex
+++ b/sections/interfaces.tex
@@ -1,4 +1,4 @@
-% Section 4 - Common interfaces
+% Section 2 - Common interfaces
 % Roberto Masocco <roberto.masocco@uniroma2.it>
 % June 5, 2024
 
@@ -43,7 +43,7 @@
     \item \texttt{QuaternionStamped}
     \item \texttt{PoseWithCovarianceStamped}
     \item \texttt{TwistWithCovarianceStamped}
-    \item \texttt{TransformStamped} (used by \texttt{tf2}!)
+    \item \texttt{TransformStamped} (used by tf2!)
     \item \texttt{AccelWithCovarianceStamped}
     \item ...
   \end{itemize}
