--- a/sections/slam.tex
+++ b/sections/slam.tex
@@ -1,4 +1,4 @@
-% Section 3 - Simultaneous Localization And Mapping
+% Section 6 - Simultaneous Localization And Mapping
 % Roberto Masocco <roberto.masocco@uniroma2.it>
 % June 5, 2024
 
@@ -102,4 +102,10 @@
 			\label{vid:building}
 		\end{figure}
   \end{columns}
+\end{frame}
+\begin{frame}{Visual SLAM}{ORB-SLAM}
+  \begin{block}{}
+    \centering
+    \href{https://www.youtube.com/watch?v=S2c7s_EFVBM}{\color{blue}\underline{\textbf{Autonomous drone test flight with ORB-SLAM2-based global localization.}}}
+  \end{block}
 \end{frame}
