--- a/main.tex
+++ b/main.tex
@@ -63,10 +63,33 @@
 % --- Title page ---
 \frame{\titlepage}
 
+% --- Final projects ---
+\begin{frame}{Exam projects}
+	\begin{itemize}
+		\item \textbg{Simulink Wrapper Node}
+		      \begin{itemize}
+			      \item ROS 2 node that wraps a Simulink Model, similarly to the MARTe2 \texttt{SimulinkWrapperGAM}.
+			      \item Deploy and test on a Turtlebot with a simple trajectory tracking algorithm fully onboard.
+		      \end{itemize}
+		\item \textbg{Comau e.DO manipulator ROS 2 integration}
+		      \begin{itemize}
+			      \item Setting up SBC (Nvidia Jetson TX2).
+			      \item Setting up Docker container.
+			      \item Setting up basic/advanced ROS 2 software for robot usage.
+		      \end{itemize}
+		\item \textbg{Improving \texttt{zed\_drivers}}
+		      \begin{itemize}
+			      \item Simple driver for non-GPU platforms based only on OpenCV.
+			      \item Simple driver for non-GPU platforms based on Open Capture API from Stereolabs.
+			      \item Deploy and test on a robot for visual servoing.
+		      \end{itemize}
+	\end{itemize}
+\end{frame}
+
 % --- Table of contents ---
 \begin{frame}
-\frametitle{Roadmap}
-\tableofcontents
+	\frametitle{Roadmap}
+	\tableofcontents
 \end{frame}
 
 % --- Section 1 ---
