--- a/sections/ekf.tex
+++ b/sections/ekf.tex
@@ -26,8 +26,8 @@
 \begin{frame}{Modelling noise}{Gaussian random variables}
   Suppose that $m=2$. At any given time, the \textbg{measurement} of a quantity $x$ can be modeled as a \textbg{Gaussian random variable} centered around the \textbg{true value} of $x$ with a certain \textbg{standard deviation}:
   \begin{itemize}
-    \item $q_1 \sim \mathcal{N}(x,\sigma_1^2)$;
-    \item $q_2 \sim \mathcal{N}(x,\sigma_2^2)$.
+    \item $q_1 \sim \mathcal{N}(x,\sigma_1^2)\,$;
+    \item $q_2 \sim \mathcal{N}(x,\sigma_2^2)\,$.
   \end{itemize}
   Having distinct sensors makes these variables \textbg{independent}.\\
   These assumptions are reasonable because:
@@ -40,18 +40,38 @@
 \begin{frame}{Modelling noise}{Gaussian random variables}
   Note that, by relying on \textbg{independence}, \textbg{Bayes' theorem}, and the \textbg{properties} of the Gaussian distribution:
   \begin{itemize}
-    \item $q_1 \sim \mathcal{N}(x,\sigma_1^2) \Rightarrow x \sim \mathcal{N}(q_1,\sigma_1^2)$;
-    \item $q_2 \sim \mathcal{N}(x,\sigma_2^2) \Rightarrow x \sim \mathcal{N}(q_2,\sigma_2^2)$;
+    \item $q_1 \sim \mathcal{N}(x,\sigma_1^2) \Rightarrow x \sim \mathcal{N}(q_1,\sigma_1^2)\,$;
+    \item $q_2 \sim \mathcal{N}(x,\sigma_2^2) \Rightarrow x \sim \mathcal{N}(q_2,\sigma_2^2)\,$;
   \end{itemize}
   \emph{i.e.}, $x$ \textbg{is also a Gaussian random variable} centered around a measurement.
 \end{frame}
 \begin{frame}{Modelling noise}{Combining variables}
-  Relying on the same results, we can \textbg{combine the two measurements} $q_1$ and $q_2$ to obtain a \textbg{better estimate} of $x$, as $x \sim \mathcal{N}(q,\sigma^2)$, where:
+  \textbg{A priori}, and in particular before getting any measurements, we can \textbg{assume that $x$ has a uniform distribution}, making $p(x)$ \textbg{independent} from both $p(q_1)$ and $p(q_2)$.\\
+  \bigskip
+  Relying on the same previous results, we can \textbg{combine the two measurements} $q_1$ and $q_2$ to obtain a \textbg{better estimate} of $x$, as $x \sim \mathcal{N}(q,\sigma^2)$, where:
   \begin{itemize}
-    \item $q = \frac{\sigma_2^2 q_1 + \sigma_1^2 q_2}{\sigma_1^2 + \sigma_2^2}$;
-    \item $\sigma^2 = \frac{\sigma_1^2 \sigma_2^2}{\sigma_1^2 + \sigma_2^2}$;
+    \item $q = \frac{\sigma_2^2 q_1 + \sigma_1^2 q_2}{\sigma_1^2 + \sigma_2^2}\,$;
+    \item $\sigma^2 = \frac{\sigma_1^2 \sigma_2^2}{\sigma_1^2 + \sigma_2^2}\,$;
   \end{itemize}
   \emph{i.e.}, $x$ is a new Gaussian random variable centered around a \textbg{weighted average} of the measurements, with a \textbg{variance} that decreases as the \textbg{uncertainty} of the measurements decreases.
+\end{frame}
+\begin{frame}{Modelling noise}{Combining variables}
+  To see this, start from using \textbg{independence} to see what it means to get $q_1$ and $q_2$:
+  \begin{equation*}
+    p((q_1,q_2)|x) = p(q_1|x)p(q_2|x) = \dotsc = \eta e^{-\frac{(x-q)^2}{2\sigma^2}}\,,
+  \end{equation*}
+  where
+  \begin{equation*}
+    \eta = \frac{1}{2\pi\sigma_1\sigma_2} e^{\frac{q^2}{2\sigma^2} - \frac{q_1^2}{2\sigma_1^2} - \frac{q_2^2}{2\sigma_2^2}}\,.
+  \end{equation*}
+  Then, \textbg{Bayes} tells you that
+  \begin{equation*}
+    p(x|(q_1,q_2)) = p((q_1,q_2)|x)\frac{p(x)}{p((q_1,q_2))} = \frac{\eta p(x)}{p((q_1,q_2))} e^{-\frac{(x-q)^2}{2\sigma^2}} = \tilde{\eta} e^{-\frac{(x-q)^2}{2\sigma^2}}\,,
+  \end{equation*}
+  where $\tilde{\eta}$ is constant due to all the hypotheses made, and in particular
+  \begin{equation*}
+    \int_{-\infty}^{+\infty} p(x|(q_1,q_2))dx = 1 \implies \tilde{\eta} = \frac{1}{\sqrt{2\pi\sigma^2}}\,.
+  \end{equation*}
 \end{frame}
 
 % --- Combining two measurements ---
@@ -60,8 +80,8 @@
   \begin{enumerate}
     \item Measurement $q_1$ arrives: $\hat{x}_1 = q_1$, $\Sigma_1^2=\sigma_1^2$.
     \item Measurement $q_2$ arrives.
-    \item $\hat{x}_{1,2} = \frac{\Sigma_1^2 q_2 + \sigma_2^2 \hat{x}_1}{\Sigma_1^2 + \sigma_2^2} = \hat{x}_1 + \frac{\Sigma_1^2}{\Sigma_1^2+\sigma_2^2}(q_2 - \hat{x}_1)$.
-    \item $\Sigma_{1,2}^2 = \frac{\Sigma_1^2 \sigma_2^2}{\Sigma_1^2 + \sigma_2^2} = (1-\frac{\Sigma_1^2}{\Sigma_1^2+\sigma_2^2})\Sigma_1^2$.
+    \item $\hat{x}_{1,2} = \frac{\Sigma_1^2 q_2 + \sigma_2^2 \hat{x}_1}{\Sigma_1^2 + \sigma_2^2} = \hat{x}_1 + \frac{\Sigma_1^2}{\Sigma_1^2+\sigma_2^2}(q_2 - \hat{x}_1)\,$.
+    \item $\Sigma_{1,2}^2 = \frac{\Sigma_1^2 \sigma_2^2}{\Sigma_1^2 + \sigma_2^2} = (1-\frac{\Sigma_1^2}{\Sigma_1^2+\sigma_2^2})\Sigma_1^2\,$.
   \end{enumerate}
 \end{frame}
 
@@ -69,14 +89,14 @@
 \begin{frame}{Combining many measurements}{The first innovation}
   Suppose now that you can receive $m$ measurements in \textbg{subsequent steps}. Then:
   \begin{equation}
-    \hat{x}_{k+1} = \hat{x}_k + V_{k+1}(q_{k+1} - \hat{x}_k),
+    \hat{x}_{k+1} = \hat{x}_k + V_{k+1}(q_{k+1} - \hat{x}_k)\,,
   \end{equation}
   \begin{equation}
-    \Sigma_{k+1}^2 = (1 - V_{k+1})\Sigma_k^2,
+    \Sigma_{k+1}^2 = (1 - V_{k+1})\Sigma_k^2\,,
   \end{equation}
   where:
   \begin{equation}
-    V_{k+1} = \frac{\Sigma_k^2}{\Sigma_k^2 + \sigma_{k+1}^2},
+    V_{k+1} = \frac{\Sigma_k^2}{\Sigma_k^2 + \sigma_{k+1}^2}\,,
   \end{equation}
   and $V_{k+1} \in (0,1)$. It is a \textbg{sampled approximation}.\\
   Note what happens when the new $k+1$-th measurement is either \textbg{very accurate} ($\sigma_{k+1}^2 \ll \Sigma_k^2$) or \textbg{very noisy} ($\sigma_{k+1}^2 \gg \Sigma_k^2$).
@@ -86,11 +106,11 @@
 \begin{frame}{Kalman filter}{The scalar case}
   Suppose you have a \textbg{dynamic system} with a \textbg{discrete-time model}:
   \begin{equation}
-    x_{k+1} = ax_k + bu_k + \omega_k,
+    x_{k+1} = ax_k + bu_k + \omega_k\,,
   \end{equation}
   with $\omega_k \sim \mathcal{N}(0,\sigma_{\omega}^2)$, and \textbg{measurements that depend on the state}:
   \begin{equation}
-    z_k = cx_k + \nu_k,
+    z_k = cx_k + \nu_k\,,
   \end{equation}
   where $\nu_k \sim \mathcal{N}(0,\sigma_{\nu}^2)$ is the \textbg{noise}.
 \end{frame}
@@ -99,11 +119,11 @@
   Then, relying on the same properties as the previous cases:
   \begin{subequations}
     \begin{align}
-      \hat{x}_{k+1}^{-} &= a\hat{x}_k + bu_k,\label{eq:predictionx}\\
-      P_{k+1}^{-} &= a^2P_k + \sigma_{\omega}^2,\label{eq:predictioncov}\\
-      K_{k+1} &= \frac{P_{k+1}^{-}c}{c^2P_{k+1}^{-} + \sigma_{\nu}^2},\label{eq:kalmangain}\\
-      \hat{x}_{k+1} &= \hat{x}_{k+1}^{-} + K_{k+1}(z_{k+1} - c\hat{x}_{k+1}^{-}),\label{eq:innovx}\\
-      P_{k+1} &= (1 - K_{k+1}c)P_{k+1}.\label{eq:innovcov}
+      \hat{x}_{k+1}^{-} &= a\hat{x}_k + bu_k\,,\label{eq:predictionx}\\
+      P_{k+1}^{-} &= a^2P_k + \sigma_{\omega}^2\,,\label{eq:predictioncov}\\
+      K_{k+1} &= \frac{P_{k+1}^{-}c}{c^2P_{k+1}^{-} + \sigma_{\nu}^2}\,,\label{eq:kalmangain}\\
+      \hat{x}_{k+1} &= \hat{x}_{k+1}^{-} + K_{k+1}(z_{k+1} - c\hat{x}_{k+1}^{-})\,,\label{eq:innovx}\\
+      P_{k+1} &= (1 - K_{k+1}c)P_{k+1}\,.\label{eq:innovcov}
     \end{align}
   \end{subequations}
   \eqref{eq:predictionx}-\eqref{eq:predictioncov} compose the \textbg{prediction step} of the \textbg{a priori estimate}, \eqref{eq:kalmangain} is the \textbg{Kalman gain}, and \eqref{eq:innovx}-\eqref{eq:innovcov} are the \textbg{correction step}, applying the \textbg{innovation term} to compute the \textbg{a posteriori estimate}.
@@ -112,11 +132,11 @@
   The \textbg{vectorial case} is a \textbg{generalization} of the scalar case, using \textbg{vectors} and \textbg{covariance matrices}.\\
   Suppose that now you have this model:
   \begin{equation}
-    x_{k+1} = Ax_k + Bu_k + \omega_k,
+    x_{k+1} = Ax_k + Bu_k + \omega_k\,,
   \end{equation}
   where $A$ and $B$ are \textbg{matrices}, $\omega_k \sim \mathcal{N}(0,Q_{\omega})$, and the \textbg{measurement} is:
   \begin{equation}
-    z_k = Cx_k + \nu_k,
+    z_k = Cx_k + \nu_k\,,
   \end{equation}
   where $\nu_k \sim \mathcal{N}(0,Q_{\nu})$.\\
   $Q_\omega$, $Q_\nu$ are the \textbg{covariance matrices} of the noises: this notation assumes that they are \textbg{constant} but in case they are \textbg{time-varying}, the following would work in the same way.
@@ -125,11 +145,11 @@
   By applying the same reasoning as before, with appropriate algebraic manipulations:
   \begin{subequations}
     \begin{align}
-      \hat{x}_{k+1}^{-} &= A\hat{x}_k + Bu_k,\label{eq:predictionxvec}\\
-      P_{k+1}^{-} &= AP_kA^T + Q_{\omega},\label{eq:predictioncovvec}\\
-      K_{k+1} &= P_{k+1}^{-}C^T(CP_{k+1}^{-}C^T + Q_{\nu})^{-1},\label{eq:kalmangainvec}\\
-      \hat{x}_{k+1} &= \hat{x}_{k+1}^{-} + K_{k+1}(z_{k+1} - C\hat{x}_{k+1}^{-}),\label{eq:innovxvec}\\
-      P_{k+1} &= (I - K_{k+1}C)P_{k+1}^{-},\label{eq:innovcovvec}
+      \hat{x}_{k+1}^{-} &= A\hat{x}_k + Bu_k\,,\label{eq:predictionxvec}\\
+      P_{k+1}^{-} &= AP_kA^T + Q_{\omega}\,,\label{eq:predictioncovvec}\\
+      K_{k+1} &= P_{k+1}^{-}C^T(CP_{k+1}^{-}C^T + Q_{\nu})^{-1}\,,\label{eq:kalmangainvec}\\
+      \hat{x}_{k+1} &= \hat{x}_{k+1}^{-} + K_{k+1}(z_{k+1} - C\hat{x}_{k+1}^{-})\,,\label{eq:innovxvec}\\
+      P_{k+1} &= (I - K_{k+1}C)P_{k+1}^{-}\,,\label{eq:innovcovvec}
     \end{align}
   \end{subequations}
   where $I$ is the identity matrix.\\
@@ -141,8 +161,8 @@
   Suppose you have a \textbg{nonlinear model}:
   \begin{subequations}
     \begin{align}
-      x_{k+1} &= f(x_k,u_k,\omega_k),\\
-      z_k &= h(x_k,\nu_k),
+      x_{k+1} &= f(x_k,u_k,\omega_k)\,,\\
+      z_k &= h(x_k,\nu_k)\,,
     \end{align}
   \end{subequations}
   with noises as random variables as before.\\
@@ -154,16 +174,16 @@
   Given the \textbg{current estimate} $\hat{x}_k$ at time $k$ and the \textbg{prediction} $\hat{x}_{k+1}^{-}$ at time $k+1$, we can write:
   \begin{subequations}
     \begin{align}
-      f(x_k,u_k,\omega_k) &= {\color{red}f(\hat{x}_k,u_k,0)} + {\color{red}F_k}(x_k - {\color{red}\hat{x}_k}) + W_k\omega_k + o(\|x_k - \hat{x}_k\|),\label{eq:flin}\\
-      h(x_{k+1},\nu_{k+1}) &= {\color{blue}h(\hat{x}_{k+1}^{-},0)} + {\color{blue}H_{k+1}}(x_{k+1} {\color{blue}- \hat{x}_{k+1}^{-}}) + L_{k+1}\nu_{k+1} + o(\|x_{k+1} - \hat{x}_{k+1}^{-}\|),\label{eq:hlin}
+      f(x_k,u_k,\omega_k) &= {\color{red}f(\hat{x}_k,u_k,0)} + {\color{red}F_k}(x_k - {\color{red}\hat{x}_k}) + W_k\omega_k + o(\|x_k - \hat{x}_k\|)\,,\label{eq:flin}\\
+      h(x_{k+1},\nu_{k+1}) &= {\color{blue}h(\hat{x}_{k+1}^{-},0)} + {\color{blue}H_{k+1}}(x_{k+1} {\color{blue}- \hat{x}_{k+1}^{-}}) + L_{k+1}\nu_{k+1} + o(\|x_{k+1} - \hat{x}_{k+1}^{-}\|)\,,\label{eq:hlin}
     \end{align}
   \end{subequations}
   where $F=\partial f/\partial x$, $W=\partial f/\partial \omega$, $H=\partial h/\partial x$, and $L=\partial h/\partial \nu$ are Jacobian matrices, which we evaluate at appropriate times.\\
   Taking \eqref{eq:flin}-\eqref{eq:hlin} as exact and rearranging known terms, these lead to:
   \begin{subequations}
     \begin{align}
-      x_{k+1} &= F_k x_k + {\color{red}f_0(\hat{x}_k,u_k)} + W_k\omega_k,\\
-      z_{k+1} &= H_{k+1}x_{k+1} + {\color{blue}h_0(\hat{x}_{k+1}^{-})} + L_{k+1}\nu_{k+1},\label{eq:newmeas}
+      x_{k+1} &= F_k x_k + {\color{red}f_0(\hat{x}_k,u_k)} + W_k\omega_k\,,\\
+      z_{k+1} &= H_{k+1}x_{k+1} + {\color{blue}h_0(\hat{x}_{k+1}^{-})} + L_{k+1}\nu_{k+1}\,,\label{eq:newmeas}
     \end{align}
   \end{subequations}
   which is easier to manage, both in terms of algebra and \textbg{computational complexity}.
@@ -172,11 +192,11 @@
   By applying the same reasoning as before, with appropriate algebraic manipulations:
   \begin{subequations}
     \begin{align}
-      \hat{x}_{k+1}^{-} &= f(\hat{x}_k,u_k,0),\\
-      P_{k+1}^{-} &= F_kP_kF_k^T + W_kQ_{\omega}W_k^T,\\
-      K_{k+1} &= P_{k+1}^{-}H_{k+1}^T(H_{k+1}P_{k+1}^{-}H_{k+1}^T + L_{k+1}Q_{\nu}L_{k+1}^T)^{-1},\\
-      \hat{x}_{k+1} &= \hat{x}_{k+1}^{-} + K_{k+1}(z_{k+1} - h(\hat{x}_{k+1}^{-},0)),\\
-      P_{k+1} &= (I - K_{k+1}H_{k+1})P_{k+1}^{-}.
+      \hat{x}_{k+1}^{-} &= f(\hat{x}_k,u_k,0)\,,\\
+      P_{k+1}^{-} &= F_kP_kF_k^T + W_kQ_{\omega}W_k^T\,,\\
+      K_{k+1} &= P_{k+1}^{-}H_{k+1}^T(H_{k+1}P_{k+1}^{-}H_{k+1}^T + L_{k+1}Q_{\nu}L_{k+1}^T)^{-1}\,,\\
+      \hat{x}_{k+1} &= \hat{x}_{k+1}^{-} + K_{k+1}(z_{k+1} - h(\hat{x}_{k+1}^{-},0))\,,\\
+      P_{k+1} &= (I - K_{k+1}H_{k+1})P_{k+1}^{-}\,.
     \end{align}
   \end{subequations}
   It is a \textbg{good compromise} between \textbg{accuracy} and \textbg{computational complexity}.
